--- a/src/Shop/Product/product.module.scss
+++ b/src/Shop/Product/product.module.scss
@@ -1,11 +1,12 @@
 .block__product {
   padding-left: 15%;
   padding-right: 15%;
+  margin-top: 100px;
   .product__title {
     font-family: 'Raleway';
     font-style: normal;
     font-weight: 500;
-    font-size: 45px;
+    font-size: 32px;
     line-height: 110%;
     letter-spacing: 0.02em;
     color: #000000;
@@ -35,7 +36,7 @@
         font-family: 'Raleway';
         font-style: normal;
         font-weight: 500;
-        font-size: 20px;
+        font-size: 24px;
         line-height: 140%;
         letter-spacing: 0.02em;
         color: #000000;
@@ -44,7 +45,7 @@
         font-family: 'Raleway';
         font-style: normal;
         font-weight: 500;
-        font-size: 40px;
+        font-size: 28px;
         line-height: 110%;
         letter-spacing: 0.02em;
         color: #998E78;
