--- a/src/Shop/bestSellers.module.scss
+++ b/src/Shop/bestSellers.module.scss
@@ -1,5 +1,4 @@
 .bestSellers {
-  display: block;
   margin: 0 auto;
   .cards {
     display: flex;
@@ -11,8 +10,8 @@
 .card {
   width: 200px;
   height: 500px;
-  border: 4px solid #2c8c6b;
-  margin: 10px;
+  border: 1px solid black;
+  margin: 20px;
   padding: 15px;
   justify-content: space-between;
   align-items: center;
@@ -57,8 +56,7 @@
 }
 
 .card:hover {
-  border: 4px solid #12c78b;
-  transition: 0.2s;
+  border: 1px solid #12c78b;
 }
 
 /*bg*/
